--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,43 +1,49 @@
 <div class="container">
-  <h1>Coins Abdel</h1>
-<input type="text" class="form-control bg-dark text-light border-0 my-4 text-center rounded-0"
-(keyup)="searchCoin()"
- [(ngModel)]="searchText"
-/>
-<table class="table table-dark">
-  <thead>
-    <tr>
-      <th *ngFor="let title of titles">
-        {{title}}
-      </th>
-      
-    </tr>
-  </thead>
-  <tbody>
-    <tr *ngFor="let coin of filteredCoins; let i = index">
-      <td class="text-muted">
-        {{i + 1}}
-      </td>
-      <td>
-        <img [src]="coin.image" alt="{{coin.name}}" style="width: 2rem;" />
-        <span class="ms-3">
-          {{coin.name}}
-        </span>
-        <span class="text-muted text-uppercase ms-2">
-          {{coin.symbol}}
-        </span>
-      </td>
-      <td>
-        ${{coin.current_price.toLocaleString()}}
-      </td>
-      <td [ngClass]="coin.price_change_percentage_24h > 0 ? 'text-success': 'text-danger'">
-        {{coin.price_change_percentage_24h.toLocaleString()}}
-      </td>
-      <td>
-        {{coin.total_volume.toLocaleString()}}
-      </td>
-    </tr>
+  <div class="d-flex align-items-center">
+    <img src="/assets/img/mi-logo.jpg" alt="" style="height: 3rem;" class="align-self-center">
+    <div class="flex-grow-1">
+      <h1 class="text-center">Coins-AJ-Saez</h1>
+    </div>
+    <input type="text" class="form-control text-dark my-3 text-center rounded-5 small-filter" (keyup)="searchCoin()"
+    [(ngModel)]="searchText" />
+  </div>
+
+   
     
-  </tbody>
-</table>
+  <table class="table table-dark">
+    <thead>
+      <tr>
+        <th *ngFor="let title of titles">
+          {{title}}
+        </th>
+
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let coin of filteredCoins; let i = index">
+        <td class="text-muted">
+          {{i + 1}}
+        </td>
+        <td>
+          <img [src]="coin.image" alt="{{coin.name}}" style="width: 2rem;" />
+          <span class="ms-3">
+            {{coin.name}}
+          </span>
+          <span class="text-muted text-uppercase ms-2">
+            {{coin.symbol}}
+          </span>
+        </td>
+        <td>
+          ${{coin.current_price.toLocaleString()}}
+        </td>
+        <td [ngClass]="coin.price_change_percentage_24h > 0 ? 'text-success': 'text-danger'">
+          {{coin.price_change_percentage_24h.toLocaleString()}}
+        </td>
+        <td>
+          {{coin.total_volume.toLocaleString()}}
+        </td>
+      </tr>
+
+    </tbody>
+  </table>
 </div>
