--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,3 +2,8 @@ body{
     background: #141414;
     color: #fff;
 }
+.small-filter {
+    width: 200px;
+    height: 30px;
+    border: 2px solid #333;
+  }
